Make XMLHttpRequest.open() throw for invalid URLs

Also adds tests for invalid/forbidden methods.

R=yhirano@chromium.org
BUG=642239

Review-Url: https://codereview.chromium.org/2297483002
Cr-Commit-Position: refs/heads/master@{#415932}

Former-commit-id: a0bab936d014e4c74e7d8bfcdb7be5a74b69c6a4